@@ -72,6 +72,7 @@ Current:
     patch #9819: Address several leaks in SVN rev 1429
     patch #9820: Fix some out-of-bounds/uninitialized issues
     patch #9818: correct typos in SVN rev 1429
+    patch #9732: usbtiny_paged_load overflows buffer e.g. when reading EEPROM
 
   * Internals:
     - New avrdude.conf keyword "family_id", used to verify SIB attributes
